
[Mushy] Added nice, sweet message when the server shuts down! :)

[Mushy] Added command /tpto <playerName> - This is designed to make teleporting easier. This will teleport the player to <playername>
        requires: mbes.cmds.tpto

[Mushy] Re-organized some stuff to make sure that the packages and imports work correctly!

[AAAA] Fixed a small package misspell in /tpto and added a check to see if the command is
       being ran from the console. And if the player arg was not entered. So errors don't occur.

[AAAA] Added the handler package and moved commands to the commands package.

[AAAA] Added /pm <name> <msg>,/block <name>,/unblock <name>,/blockall,/unblockall

[AAAA] Deleted unused PM handler

[AAAA] Added /mute <name> - mutes that person from global chat

[AAAA] Added Mutehandler - Listens for chats and mutes if person has been muted from global chat

[Mushy] Added /tphere <playername> - requires mbes.cmds.tphere

[AAAA] added /pay <name> <amount>,/addmoney <name> <amount> ,/rmvmoney <name> <amount> - removes money
       /balance,/resetmoney <name> - set there money to 0
    
[AAAA] added AccountMaker handler.

[AAAA] Implimented the Config. 

[AAAA] Added a cancellable PMEvent thats is triggered when ever a pm is sent. You can catch it with a EventHandler.

[Abiram] Added Config code for Money (enable-option), ToolUseBlocker (enable-option, array of ID's), BlockPlaceBlocker (enable-option, array of ID's)

[AAAA] Tested most of the commands and everything works good. Nice job TheMushyPeas and Abiram

[AAAA] Fixed a bug with the command /pm. I deleted /thru from the PlannedFeatures because you need to be able
       to know which direction the player is facing and its not possible to see that with the current server api.
       
[AAAA] Added death,command,pvp,killed Logs but killed is not working because i have to find a way to detect when a player killed a player

[AAAA] /kill now teleports the player under the world causing them to die instantly.
