@@ -12,9 +12,15 @@ public class Config {
 	 	private boolean enablePlaceLog;
 	 	private boolean enableBreakLog;
 	 	private boolean enableCommandLog;
+<<<<<<< HEAD
 
 
 
+=======
+	 	
+	 	
+		
+>>>>>>> d72152bcfbde206b66d8a9843473eead5d61b219
 		private int[] blockedBlockIDs;
 	    	private boolean enableToolBlocker;
 	    	private int[] blockedToolIDs;
@@ -35,7 +41,11 @@ public class Config {
 	       this.setEnablePvPLog(true);
 	       this.setEnablePlaceLog(false);
 	       this.setEnableBreakLog(false);
+<<<<<<< HEAD
 
+=======
+	  
+>>>>>>> d72152bcfbde206b66d8a9843473eead5d61b219
 	 	}
 	 	public void setEnablePlaceLog(boolean enablePlaceLog) {
 			this.enablePlaceLog = enablePlaceLog;
@@ -131,7 +141,13 @@ public class Config {
 		public boolean isEnablePlaceLog() {
 			return enablePlaceLog;
 		}
+<<<<<<< HEAD
 		
+=======
+		public void setEnableDeathLog(boolean enablePlaceLog) {
+			this.enablePlaceLog = enablePlaceLog;
+		}
+>>>>>>> d72152bcfbde206b66d8a9843473eead5d61b219
 		public boolean isEnableBreakLog() {
 			return enableBreakLog;
 		}
