@@ -70,3 +70,6 @@
 
 [AAAA] /kill now teleports the player under the world causing them to die instantly.
 
+[mushy] Now the PM system can be disabled
+
+[mushy] Added block place/break logging support. Thanks to Abiram for providing the original source on the forums!
